modal : fixed, z-index , event.target 중요

--- a/31_web_project/src/main/webapp/resources/css/home_section.css
+++ b/31_web_project/src/main/webapp/resources/css/home_section.css
@@ -66,6 +66,21 @@
 
 
 
+.section .wrap-modal {
+	display: none;
+	position:fixed;	top:0; left:0;
+	width: 100%; height: 100%;
+	background-color: rgba(130,130,130, 0.2);
+	z-index: 99999;
+}
+.section .wrap-modal > .modal-content{
+	width: 500px; margin : 0 auto;
+	position: relative;
+	top: 50px;
+	background-color: olive; 
+}
+
+
 
 
 
